--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./bootstrap-5.0.0-beta/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-responsive.css">
     <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
@@ -402,27 +402,27 @@
     <!-- Contact -->
     <section class="footer-contact">
 
-                <ul class="row-footer-contact">
-                    <li class="footer-contact-item-1">
-                        <h2>Liên hệ</h2>
-                    </li>
-                    <li class="footer-contact-item-2">
-                        <img src="./images/icon-pin.svg" alt="">
-                        <p>No. 22, N7 street, Quarter 3, Cat Lai Ward, District 2, Ho Chi Minh City</p>
-                    </li>
-                    <li class="footer-contact-item-2">
-                        <img src="./images/icon-hotline-02.svg" alt="">
-                        <p>028 6652 3966</p>
-                    </li>
-                    <li class="footer-contact-item-2">
-                        <img src="./images/icon-email.svg" alt="">
-                        <p>info@ozonejsc.vnskyqueen.vn</p>
-                    </li>
-                    <li class="footer-contact-item-2">
-                        <img src="./images/icon-browser.svg" alt="">
-                        <p>www.ozonejsc.vn</p>
-                    </li>
-                </ul>
+        <ul class="row-footer-contact">
+            <li class="footer-contact-item-1">
+                <h2>Liên hệ</h2>
+            </li>
+            <li class="footer-contact-item-2">
+                <a href="https://goo.gl/maps/VJSmeQrTGUFvpSS66"><img src="./images/icon-pin.svg" alt=""></a>
+                <p>No. 22, N7 street, Quarter 3, Cat Lai Ward, District 2, Ho Chi Minh City</p>
+            </li>
+            <li class="footer-contact-item-2">
+                <a href=""><img src="./images/icon-hotline-02.svg" alt=""></a>
+                <p>028 6652 3966</p>
+            </li>
+            <li class="footer-contact-item-2">
+                <a href=""><img src="./images/icon-email.svg" alt=""></a>
+                <p>info@ozonejsc.vnskyqueen.vn</p>
+            </li>
+            <li class="footer-contact-item-2">
+                <a href=""><img src="./images/icon-browser.svg" alt=""></a>
+                <p>www.ozonejsc.vn</p>
+            </li>
+        </ul>
 
     </section>
     <!-- Footer -->
@@ -463,10 +463,12 @@
     </section>
     <!-- Links -->
     <section class="footer-links">
-        <a href=""><img src="./images/icon-blue-twitter.svg" alt=""></a>
-        <a href=""><img src="./images/icon-blue-facebook.svg" alt=""></a>
-        <a href=""><img src="./images/icon-blue-instagram.svg" alt=""></a>
+        <a href=""><img class="icon-link" src="./images/icon-blue-twitter.svg" alt=""></a>
+        <a href=""><img class="icon-link" src="./images/icon-blue-facebook.svg" alt=""></a>
+        <a href=""><img class="icon-link" src="./images/icon-blue-instagram.svg" alt=""></a>
     </section>
+
+    <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true" style="display: inline;"><i class="fa fa-arrow-up"></i></a>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./bootstrap-5.0.0-beta/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
