4th Test Ozone Web

--- a/index.html
+++ b/index.html
@@ -385,11 +385,11 @@
         </div>
         <!-- Brands -->
         <div class="row brands">
-            <img class="col 6 col-md-2" src="./images/client-bcg.png" alt="">
-            <img class="col 6 col-md-2" src="./images/client-rob.png" alt="">
-            <img class="col 4 col-md-2" src="./images/client-ksm.png" alt="">
-            <img class="col 4 col-md-2" src="./images/client-inc.png" alt="">
-            <img class="col 4 col-md-2" src="./images/client-incite.png" alt="">
+            <a class="col 6 col-md-2" href=""><img src="./images/client-bcg.png" alt=""></a>
+            <a class="col 6 col-md-2" href=""><img src="./images/client-rob.png" alt=""></a>
+            <a class="col 4 col-md-2" href=""><img src="./images/client-ksm.png" alt=""></a>
+            <a class="col 4 col-md-2" href=""><img src="./images/client-inc.png" alt=""></a>
+            <a class="col 4 col-md-2" href=""><img src="./images/client-incite.png" alt=""></a>
         </div>
         <div class="row brands-mobile">
             <img class="col 6 col-md-2" src="./images/client-bcg.png" alt="">
@@ -419,7 +419,7 @@
                 <p>info@ozonejsc.vnskyqueen.vn</p>
             </li>
             <li class="footer-contact-item-2">
-                <a href=""><img src="./images/icon-browser.svg" alt=""></a>
+                <a href="https://mrbun1906.github.io/"><img src="./images/icon-browser.svg" alt=""></a>
                 <p>www.ozonejsc.vn</p>
             </li>
         </ul>
@@ -468,7 +468,8 @@
         <a href=""><img class="icon-link" src="./images/icon-blue-instagram.svg" alt=""></a>
     </section>
 
-    <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true" style="display: inline;"><i class="fa fa-arrow-up"></i></a>
+    <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"
+        style="display: inline;"><i class="fa fa-arrow-up"></i></a>
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./bootstrap-5.0.0-beta/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
