--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="btn-slip-down">
             <img src="./images/inverted-triangle.png" alt="">
-            <a href=""><img src="./images/icon-slip-down.svg" alt=""></a>
+            <a href=""><img class="scrollDown" src="./images/icon-slip-down.svg" alt=""></a>
         </div>
     </section>
     <!-- About-Us -->
@@ -383,21 +383,21 @@
                     </div>
                 </div>
             </div>
+            <!-- Brands -->
+            <div class="row brands">
+                <a class="col 6 col-md-2" href=""><img src="./images/client-bcg.jpg" alt=""></a>
+                <a class="col 6 col-md-2" href=""><img src="./images/client-rob.png" alt=""></a>
+                <a class="col 4 col-md-2" href=""><img src="./images/client-ksm.png" alt=""></a>
+                <a class="col 4 col-md-2" href=""><img src="./images/client-inc.png" alt=""></a>
+                <a class="col 4 col-md-2" href=""><img src="./images/client-incite.png" alt=""></a>
+            </div>
         </div>
-        <!-- Brands -->
-        <div class="row brands">
-            <a class="col 6 col-md-2" href=""><img src="./images/client-bcg.png" alt=""></a>
+        <div class="row brands-mobile">
+            <a class="col 6 col-md-2" href=""><img src="./images/client-bcg.jpg" alt=""></a>
             <a class="col 6 col-md-2" href=""><img src="./images/client-rob.png" alt=""></a>
             <a class="col 4 col-md-2" href=""><img src="./images/client-ksm.png" alt=""></a>
             <a class="col 4 col-md-2" href=""><img src="./images/client-inc.png" alt=""></a>
             <a class="col 4 col-md-2" href=""><img src="./images/client-incite.png" alt=""></a>
-        </div>
-        <div class="row brands-mobile">
-            <img class="col 6 col-md-2" src="./images/client-bcg.png" alt="">
-            <img class="col 6 col-md-2" src="./images/client-rob.png" alt="">
-            <img class="col 4 col-md-2" src="./images/client-ksm.png" alt="">
-            <img class="col 4 col-md-2" src="./images/client-inc.png" alt="">
-            <img class="col 4 col-md-2" src="./images/client-incite.png" alt="">
         </div>
     </section>
     <!-- Contact -->
