Update Contact Function

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="contact-name">
                             <p>HOTLINE</p>
-                            <span>028 6652 3966</span>
+                            <span><a href="tel:02866523966">028 6652 3966</a></span>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -63,7 +63,7 @@
                         </div>
                         <div class="contact-name">
                             <p>EMAIL</p>
-                            <span>info@ozonejsc.vn</span>
+                            <span><a href="mailto:info@ozonejsc.vn">info@ozonejsc.vn</a></span>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -72,7 +72,7 @@
                         </div>
                         <div class="contact-name">
                             <p>GIỜ LÀM VIỆC</p>
-                            <span>Mon. - Fri. 08AM - 18PM</span>
+                            <span><a href="">Mon. - Fri. 08AM - 18PM</a></span>
                         </div>
                     </div>
                 </div>
