8th Test Ozone Web

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <span><a href="mailto:info@ozonejsc.vn">info@ozonejsc.vn</a></span>
                         </div>
                     </div>
-                    <div class="contact-item">
+                    <div class="contact-item time-working">
                         <div class="contact-icon">
                             <img src="./images/icon-clock.svg" alt="" title="Mon. - Fri. 08AM - 18PM">
                         </div>
@@ -143,10 +143,10 @@
                 </div>
                 <div class="col-md-6 about-us-desciption">
                     <h2>
-                        <span>Ozone Company</span> <br>
+                        <span>Ozone Company</span>
                         <p>Về chúng tôi</p>
                     </h2>
-                    <p>Thị trường xây dựng tại Việt Nam đang có những bước
+                    <p class="about-us-text">Thị trường xây dựng tại Việt Nam đang có những bước
                         chuyển mình vô cùng mạnh mẽ trong xây dựng cơ bản, đi
                         kèm với nó là thị trường. Vật Liệu xây dựng phát triển đa
                         dạng với nhiều phân khúc và chất lượng khác nhau. Với
@@ -228,7 +228,7 @@
     </section>
     <!-- News -->
     <section class="news">
-        <div class="container">
+        <div class="container container-news">
             <!--Main Title -->
             <div class="main-title">
                 <h2>
@@ -384,20 +384,13 @@
                 </div>
             </div>
             <!-- Brands -->
-            <div class="row brands">
-                <a class="col 6 col-md-2" href=""><img src="./images/client-bcg.jpg" alt=""></a>
-                <a class="col 6 col-md-2" href=""><img src="./images/client-rob.png" alt=""></a>
-                <a class="col 4 col-md-2" href=""><img src="./images/client-ksm.png" alt=""></a>
-                <a class="col 4 col-md-2" href=""><img src="./images/client-inc.png" alt=""></a>
-                <a class="col 4 col-md-2" href=""><img src="./images/client-incite.png" alt=""></a>
+            <div class="brands">
+                <a href=""><img src="./images/client-bcg.jpg" alt=""></a>
+                <a href=""><img src="./images/client-rob.png" alt=""></a>
+                <a href=""><img src="./images/client-ksm.png" alt=""></a>
+                <a href=""><img src="./images/client-inc.png" alt=""></a>
+                <a href=""><img src="./images/client-incite.png" alt=""></a>
             </div>
-        </div>
-        <div class="row brands-mobile">
-            <a class="col 6 col-md-2" href=""><img src="./images/client-bcg.jpg" alt=""></a>
-            <a class="col 6 col-md-2" href=""><img src="./images/client-rob.png" alt=""></a>
-            <a class="col 4 col-md-2" href=""><img src="./images/client-ksm.png" alt=""></a>
-            <a class="col 4 col-md-2" href=""><img src="./images/client-inc.png" alt=""></a>
-            <a class="col 4 col-md-2" href=""><img src="./images/client-incite.png" alt=""></a>
         </div>
     </section>
     <!-- Contact -->
@@ -412,11 +405,11 @@
                 <p>No. 22, N7 street, Quarter 3, Cat Lai Ward, District 2, Ho Chi Minh City</p>
             </li>
             <li class="footer-contact-item-2">
-                <a href=""><img src="./images/icon-hotline-02.svg" alt=""></a>
+                <a href="tel:02866523966"><img src="./images/icon-hotline-02.svg" alt=""></a>
                 <p>028 6652 3966</p>
             </li>
             <li class="footer-contact-item-2">
-                <a href=""><img src="./images/icon-email.svg" alt=""></a>
+                <a href="mailto:info@ozonejsc.vnskyqueen.vn"><img src="./images/icon-email.svg" alt=""></a>
                 <p>info@ozonejsc.vnskyqueen.vn</p>
             </li>
             <li class="footer-contact-item-2">
