8th Test Ozone Web -1

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="btn-slip-down">
             <img src="./images/inverted-triangle.png" alt="">
-            <a href=""><img class="scrollDown" src="./images/icon-slip-down.svg" alt=""></a>
+            <i><img class="scrollDown" src="./images/icon-slip-down.svg" alt=""></i>
         </div>
     </section>
     <!-- About-Us -->
